chapter12/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  type: NodePort
  selector:
    app: random-generator
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30036 # 포트를 직접 지정하지 않으면 임의로 선택된 포트가 지정
      protocol: TCP
